spacing fixes

--- a/styles/detail.css
+++ b/styles/detail.css
@@ -83,6 +83,7 @@
     text-align: justify;
     font-size: 18px;
 }
+
 .detail-reviews-container {
     grid-area: 4 / 3 / span 1 / span 4;
     display: flex;
@@ -154,19 +155,19 @@
     margin-left: auto;
 }
 .detail-reviews-stars {
-    margin-right: 10px;
+    margin-right: 5px;
 }
 .true-to-size-label {
-    margin-right: 15px;
+    margin-right: 10px;
 }
 .comfort-label {
-    margin-right: 27px;
+    margin-right: 22px;
 }
 .cuteness-label {
-    margin-right: 30px;
+    margin-right: 25px;
 }
 .durability-label {
-    margin-right: 21px;
+    margin-right: 16px;
 }
 .detail-reviews-fifth-row {
     /* width: 100%; */
@@ -202,10 +203,11 @@
     margin-right: 20px;
 }
 .quantity-dropdown-container {
+    width: 45%;
     padding-right: 8px;
 }
 .quantity-dropdown {
-    width: 90px;
+    width: 100%;
     height: 50px;
     border-radius: 10px;
 }
@@ -241,11 +243,14 @@
     align-items: center;
     text-align: center;
 }
+.detail-add-to-cart-link {
+    width: 90%;
+}
 .detail-add-to-cart-button {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 200px;
+    width: 100%;
     height: 64px;
     border-radius: 10px;
     background: #219897;
@@ -265,7 +270,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 200px;
+    width: 90%;
     height: 64px;
     background: #EEEEEE;
     border: 1px solid #219897;
